# lean-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  build-all-targets  build-release  clean  lean-benchmark.py  lean_benchmark.py  package.json  testit
.github/workflows/: on-release.yml  push.yml
cmake/: generic_binary.cmake
liblean-benchmark/: CMakeLists.txt
liblean-benchmark/include/: lean-benchmark.h  util.h
liblean-benchmark/source/: lbmk.c  print.h
on/: ch32v307  ch32v307-none-embed  ch32v307-wch-elf  cortex-m3  cortex-m33  cortex-m4  cw308-f2  linux  nucleo-f411  nucleo-n657  nucleo-u5a5  rv32i  rv32imcb  rv64imc  stm32f2  stm32f4  stm32l5  stm32u5
test/source/: main.c
